HREPTWO-2811: Documents column should use the complete height of the screen before showing pagination https://issues.onehippo.com/browse/HREPTWO-2811  - Hide x scrollbar and show y scrollbar on doclisting table body
svn path=/hippo-ecm/trunk/; revision=19363

--- a/repository/package/skin/src/main/webapp/screen.css
+++ b/repository/package/skin/src/main/webapp/screen.css
@@ -1179,3 +1179,10 @@ table.hippo-defaultcontent td {
   top: -2000px;
   position: absolute;
 }
+
+table.hippo-list-documents > tbody {
+  overflow-x: hidden;
+  overflow-y: auto;
+  -ms-overflow-x: hidden;
+  -ms-overflow-y: auto;
+}
